--- a/assets/style.css
+++ b/assets/style.css
@@ -98,7 +98,7 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: black;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
@@ -152,6 +152,12 @@ body {
 	font-size: 22px;
 }
 
+.localBusiness{
+	flex-direction: column;
+	z-index: 10;
+	width: 25%;
+}
+
 #services {
 	margin: auto;
 	background-color: #A8D5D8 ;
@@ -188,6 +194,7 @@ body {
 }
 
 #contact {
+	display: flex;
 	margin: auto;
 	background-color: #D8D3A8 ;
 	position: relative;
@@ -201,10 +208,10 @@ body {
 .picture.right::before {
 	content: ' ';
 	background-color: #BEB45A;
-	width: 374px;
+	width: 419px;
 	height: 329px;
 	position: absolute;
-	bottom: 0;
+	bottom: -127px;
 	right: 0;
 	z-index: -1;
 }
