--- a/assets/style.css
+++ b/assets/style.css
@@ -75,19 +75,19 @@ body {
 	flex: 2
 }
 .about-me__title {
-	margin-top: 1em;
-	margin-bottom: 60px;
+	margin-bottom: 20px;
 	font-size: 30px;
 }
 .about-me__introduction {
-	font-family: 'Spectral';
+	font-family: 'nunito', sans-serif;
 	font-weight: 800;
 	font-style: italic;
-	width: 60%;
+	width: 70%;
+	margin-bottom: 20px;
 }
 #about-me p {
-	width: 80%;
-	font-size: 14px;
+	width: 50%;
+	font-size: 15px;
 }
 
 .title{
@@ -134,20 +134,20 @@ body {
 }
 
 .quote {
-	font-family: 'Spectral';
+	font-family: 'nunito', sans-serif;
 	font-style: italic;
 	width: 70%;
 	margin: auto;
 	padding-block: 3em;
 }
 .quote__text {
-	font-family: Spectral;
+	font-family: 'nunito', sans-serif;
 	font-style: italic;
 	font-weight: 300;
 
 }
 .quote__author {
-	font-family: Spectral;
+	font-family: 'nunito', sans-serif;
 	font-weight: 800;
 	font-size: 22px;
 }
